style(fix): fixed hidden overflow y to responsive.

--- a/resources/css/responsive-report.css
+++ b/resources/css/responsive-report.css
@@ -4,7 +4,6 @@
         height: 100vh;
         margin: 0;
         padding: 0;
-        overflow-y: hidden !Important; /* Hide vertical scrollbar */
         overflow-x: hidden !Important; /* Hide horizontal scrollbar */
         font-size: 12px !important;
     }
